# Agent-Database-Reader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build-docker.bat  docker-compose.yml  pyproject.toml  start_mcp_server.bat
context/: glosario.json
src/sql_llm_agent/mcp_server/: database.py  main.py  models.py
